# almacen

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  COMPLETION_SUMMARY.md  GUIA_MIGRACIONES_ALEMBIC.md  GUIA_MIGRACION_MVC_QT_DESIGNER.md  README.md  README_AI_TEAM.md  SOLUCION_ERRORES_DEPENDENCIAS.md  VALIDACION_FINAL_EXPORTACION_UI.md  add_test_clients.py  add_test_products.py  ai_team_cli.py  ai_team_test.py  alembic.ini  almacen.py  almacen2.py  almacen_pro.db  almacen_pro.db-shm  almacen_pro.db-wal  almacenpro_schema.sql  check_dependencies.py  config.json  current_packages.txt  diagnostic_pos.py  fix_admin.py  fix_cli_encoding.py  generate_remaining_ui_files.py  generate_ui_simple.py  load_sample_data_script.py  main.py  main_mvc.py  migrate_config_to_env.py  pyproject.toml  requirements.txt  setup_precommit.py  simple_predictive_test.py  stage1_complete_test.py  system_diagnostics.py  system_validation.py  (+16 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  security.yml
ai_agent/: __init__.py  ai_coordination_cli.py  ai_devops.py  ai_helpers.py  claude_code_integration.py  collaborative_ai_system.py  config.py  enhanced_ai_devops.py  github_integration.py
ai_sync/: claude_status.json  collaboration_tasks.json  conflicts.json  consensus_log.json
ai_sync/claude_requests/: req_1754968612_9335.json  req_1754968612_9335_prompt.md  req_1754969010_8930.json  req_1754969010_8930_prompt.md
backups/: backup_registry.json
config/: __init__.py  env_config.py  env_settings.py  settings.py
controllers/: __init__.py  base_controller.py  customers_controller.py  customers_widget_controller.py  enhanced_predictive_analytics_controller.py  financial_controller.py  inventory_controller.py  login_controller.py  main_controller.py  reports_controller.py  sales_controller.py  sales_widget_controller.py
data/: almacen_pro.backup  almacen_pro.db  almacen_pro.db-shm  almacen_pro.db-wal
database/: __init__.py  manager.py  migrate.py  models.py  schema_master.sql
database/migrations/: env.py  script.py.mako
database/migrations/versions/: 001_initial_schema.py  002_add_detalle_ventas_created_at.py  003_add_audit_columns_detalle_ventas.py
database/scripts/: schema_export.sql
docs/: ANALISIS_DUPLICACION_LOGICA.md  DATABASE.md  DEPENDENCIAS_POS.md  DEVELOPMENT.md  DIAGRAMA_BASE_DATOS.md  DICCIONARIO.md  GUIA_MIGRACIONES_ALEMBIC_ACTUALIZADA.md  GUIA_PRE_COMMIT.md  PLAN_ETAPAS_DESARROLLO.md  PROPOSITO.md  README.md  RESUMEN_CICLO_MEJORAS.md  RESUMEN_EXPORTACION_UI_COMPLETA.md  RESUMEN_MIGRACION_MVC_COMPLETADA.md  RESUMEN_PRUEBAS_SISTEMA.md  REVISION_COMPLETA_IMPLEMENTACION.md  SCHEMAS.md  SYSTEM_OVERVIEW.md  cleanup_list.txt
managers/: __init__.py  advanced_customer_manager.py  communication_manager.py  customer_manager.py  customer_manager_fixed.py  enterprise_user_manager.py  financial_manager.py  financial_manager_old.py  inventory_manager.py  predictive_analysis_manager.py  product_manager-backup.py  product_manager.py  provider_manager.py  purchase_manager-backup.py  purchase_manager.py  report_manager.py  sales_manager.py  sales_manager_fixed.py  sales_manager_original.py  user_manager.py
models/: __init__.py  base_model.py  customer_model.py  entities.py  financial_model.py  inventory_model.py  product_model.py  sales_model.py
test-correction/: SISTEMA_COMPLETADO.md  apply_db_upgrades.py  complementary_data_script.py  create_logs_table.py  create_test_users_script.py  database_analysis_20250806_124301.md  database_analyzer_script.py  errores.txt  final_system_setup.py  fix_database_errors.py  generador_SK.py  main_window.py.backup3  simple_setup.py  upgrade-db.py  verify_system.py
tests/: __init__.py  conftest.py
tests/integration/: test_sales_flow.py
tests/unit/: test_database_manager.py  test_sales_controller.py
ui/: __init__.py  main_window.py  main_window.py.backup
ui/dialogs/: __init__.py  add_product_dialog.py  add_provider_dialog.py  backup_dialog.py  customer_dialog.py  customer_selector_dialog.py  login_dialog.py  payment_debt_dialog.py  payment_dialog.py  report_dialog.py  user_management_dialog.py
ui/widgets/: __init__.py  admin_widget.py  advanced_crm_widget.py  advanced_stock_widget.py  customers_widget.py  dashboard_widget.py  executive_dashboard_widget.py  predictive_analytics_widget.py  providers_widget.py  purchases_widget.py  reports_widget.py  sales_widget.py  stock_widget.py
utils/: __init__.py  audit_logger.py  backup_manager.py  electronic_billing.py  exporters.py  formatters.py  helpers.py  ml_utils.py  notifications.py  style_manager.py  ticket_printer.py  validators.py
views/: __init__.py
views/dialogs/: add_product_dialog.ui  add_provider_dialog.ui  backup_dialog.ui  customer_dialog.ui  customer_selector_dialog.ui  login_dialog.ui  payment_debt_dialog.ui  payment_dialog.ui  receive_purchase_dialog.ui  report_dialog.ui  sales_process_dialog.ui  user_management_dialog.ui
views/forms/: customers_widget.ui  sales_widget.ui
views/widgets/: admin_widget.ui  advanced_crm_widget.ui  advanced_stock_widget.ui  dashboard_widget.ui  enhanced_predictive_analytics_widget.ui  executive_dashboard_advanced_widget.ui  executive_dashboard_widget.ui  inventory_widget.ui  predictive_analytics_widget.ui  providers_widget.ui  purchases_widget.ui  reports_widget.ui  stock_widget.ui
web/customer_portal/: __init__.py  app.py
web/customer_portal/static/css/: portal.css
web/customer_portal/static/js/: portal.js
web/customer_portal/templates/: account.html  base.html  dashboard.html  index.html  login.html  profile.html  purchase_detail.html  purchases.html  register.html  support.html
